7149
Please search for existing tickets before opening new ones.  Already fixed in trunk.  However all is not lost, I used this ticket as motivation to backport those two commits for 2.9.2.
```
scala> def k( j : (Int => Int) => Int ) : Int = j(_+1)
k: (j: (Int => Int) => Int)Int

scala> def p(q : Int => Int) : Int = q(0)
p: (q: Int => Int)Int

scala> def z = (x : Int) => (y : Int) => x + y
z: Int => (Int => Int)

scala> k(p)
res0: Int = 1

scala> k(z)
<console>:10: error: type mismatch;
 found   : Int => (Int => Int)
 required: (Int => Int) => Int
              k(z)
                ^
```
